revert profile image

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "Sameerkash/sameerkash.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   name             : "Sameer"
   pronouns         : # example: "she/her"  
   bio              : "Full Stack AI Engineer"
